@@ -48,4 +48,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens org.dynamisvfx.vulkan/org.dynamisvfx.vulkan=ALL-UNNAMED --add-opens org.dynamisvfx.vulkan/org.dynamisvfx.vulkan.parity=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
